# callgrind-viewer

./: CMakeLists.txt  README.md  assistant.cpp  callgrindhighlighter.cpp  callgrindhighlighter.h  callgrindviewer.pro  findfiledialog.cpp  foldoverlay.cpp  foldoverlay.h  linenumbering.cpp  linenumbering.h  main.cpp  mainwindow.cpp  mainwindow.h  simpletextviewer.pro  textedit.cpp  textedit.h
assets/: sampleCallGrindFile.txt
documentation/: about.txt  findfile.html  index.html  intro.html  simpletextviewer.qhcp  simpletextviewer.qhp
